force-app/main/default/objects/ASF_ButtonCardConfig__mdt/ASF_ButtonCardConfig__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata is use for creating group of Buttons and define the dynamic LWC to be invoked based on it.</description>
    <label>ASF_ButtonCardConfig</label>
    <pluralLabel>ASF_ButtonCardConfigs</pluralLabel>
</CustomObject>