force-app/main/default/objects/ASF_ButtonCardConfig__mdt/fields/Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Button_Label__c</fullName>
    <description>This label is visible on UI</description>
    <label>Button Label</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>