force-app/main/default/objects/ASF_ButtonCardConfig__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>ObjectApiName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Asset</fullName>
                <default>true</default>
                <label>Asset</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>