force-app/main/default/objects/ASF_ButtonCardConfig__mdt/fields/On_Click_Invoke_LWC__c.field-meta.xml
<CustomField>
    <fullName>On_Click_Invoke_LWC__c</fullName>
    <label>On Click Invoke LWC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>