force-app/main/default/objects/ASF_ButtonCardConfig__mdt/fields/SLDS_Icon__c.field-meta.xml
<CustomField>
    <fullName>SLDS_Icon__c</fullName>
    <label>SLDS Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>